# MIDIPiano

./: .gitignore  .travis.yml  CMakeLists.txt  MIDIPiano.sln  MIDIPiano.vcxproj  MIDIPiano.vcxproj.filters  changelog.md  license.md  main.cpp  midi_piano.cpp  midi_piano.h  readme.md
.circleci/: config.yml  generate_cache_checksum.ps1  generate_release_tag.sh  install_windows_dependencies.ps1  tag-release-commit.py
.githooks/: pre-commit
.github/workflows/: build-and-test.yml  c-cpp.yml  release.yml
.gitlab/: .gitlab-ci.yml
.gitlab/scripts/: build.ps1  deploy.sh  generate_release_tag.sh  test.ps1
.install/: install.sh
core/: midi_piano.cpp  midi_piano.h
inc/core/: midi_piano.h
main/: main.cpp  win32_main.cpp
src/: main.cpp
src/core/: i_logger.h  i_midi_out.h  i_user_io.h  keymapper.cpp  keymapper.h  midi_piano.cpp  midi_piano.h
src/lib/win32libs/win32_driver_info/: CMakeLists.txt  win32_driver_info.cpp  win32_driver_info.h
src/lib/win32libs/win32_midi/: CMakeLists.txt  win32_create_midi_exception.h  win32_midi.cpp  win32_midi.h  win32_note.cpp  win32_note.h
src/lib/win32libs/win32_opengl/: CMakeLists.txt  win32_open_gl_init_exception.h  win32_opengl.cpp  win32_opengl.h  win32_opengl_version.h
src/lib/win32libs/win32_window/: CMakeLists.txt  win32_create_window_exception.h  win32_window.cpp  win32_window.h
src/main/: main.cpp  win32_main.cpp
src/test/core/: keymapper_test.cpp  midi_piano_test.cpp
test/core/: midi_piano_test.cpp
